third_party/rust/cxx/v1/crate/tests/ui/nonempty_impl_block.rs
#[cxx::bridge]
mod ffi {
    struct S {
        x: u8,
    }

    impl UniquePtr<S> {
        fn new() -> Self;
    }
}

fn main() {}
